--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
-body {
+body, html {
     font-family: 'Nunito', sans-serif;
-    font-size: 18px;
     font-weight: 600;
     line-height: 22px;
     color: #333333;
@@ -12,26 +11,47 @@ a {
     color: #333333;
 }
 
+.f-s-18 {
+    font-size: 1.12rem;
+}
+
+f-s-22 {
+    font-size: 1.37rem;
+}
+
+.fixed-navbar {
+    position: fixed;
+    top: 0;
+    padding: 0;
+    z-index: 99999;
+    background-color: #FFFFFF;
+    box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.05);
+}
+
 .navbar {
     height: 80px;
 }
 
-.blue-icon {
-    color: #008EFF;
+.bi-chevron-down, .bi-chevron-left, .bi-chevron-right, .blue-icon {
+    color: #BABABA;
     margin: 0 5px 0 5px;
 }
 
-.bi-chevron-down, .bi-chevron-left, .bi-chevron-right {
-    color: #BABABA;
-    margin: 0 5px 0 5px;
+.blue-icon {
+    color: #008EFF;
+}
+
+.bi-list {
+    font-size: 1.63rem;
 }
 
 .bg-image {
     background-image: url("images/bg.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 0 44%;
+    background-position: 0 30%;
     height: 300px;
+    margin-top: 80px;
 }
 
 .logo-container {
@@ -39,7 +59,7 @@ a {
     height: 130px;
     border-radius: 50%;
     background: #FFFFFF;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,7 +98,7 @@ a {
 }
 
 a.cat-menu-active, .cat-menu a:hover {
-    background-color: rgb(0, 142, 255, .1);
+    background-color: rgba(0, 142, 255, .1);
     color: #008EFF;
 }
 
@@ -121,4 +141,39 @@ a.cat-menu-active, .cat-menu a:hover {
 .card {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+}
+
+.cart {
+    width: 370px;
+    height: 100vh;
+    position: fixed;
+    top: 80px;
+    right: 0;
+    margin-left: -400px;
+    background: rgba(255, 255, 255);
+    box-shadow: -10px 0px 25px rgba(0, 0, 0, 0.05);
+}
+
+.minus-button, .plus-button {
+    background-color: rgba(0, 142, 255, .1);
+    border-radius: 5px;
+    width: 24px;
+    height: 24px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    color: #008EFF;
+}
+
+.checkout-button {
+    background-color: #008EFF;
+    padding: 0.7rem;
+    border: none;
+    border-radius: 10px;
+    color: #FFFFFF;
+    outline: none;
+}
+
+.checkout-button:hover {
+    color: #BABABA;
 }
