--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,6 @@ p {
 
 .delimiter {
     border-bottom: 1px #d6d6d6 solid;
-    margin-bottom: 15px;
 }
 
 .search-menu {
@@ -209,6 +208,7 @@ a.cat-menu-active, .cat-menu a:hover {
     background: #FFFFFF;
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.05);
     padding-bottom: 10px;
+    padding-top: 15px;
     margin-bottom: 20px;
 }
 
